<resources>
    <string name="app_name">MYO Delicious</string>
    <string name="Bienvenida">Bienvenidos</string>
    <string name="tex_slaide_Inicial1">DESCUBRE EL MEJOR CATALOGO DE POSTRES</string>
    <string name="tex_slaide_imicial2">Tortas, galletas, bebidas y más. Artesanales, frescos y listos para ti.</string>
    <string name="button_omitir">Omitir</string>
    <string name="button_siguiente"><![CDATA[Siguiente ->]]></string>
    <string name="tex_slide2">FACIL Y RAPIDO</string>
    <string name="tex_slide_secundario">PIDE EN SEGUNDOS, DESDE DONDE ESTES</string>
    <string name="text_slide_secundario2">Agrega al carrito, elige tu dirección y paga de forma sgura con un solo toque</string>
    <string name="text_slide_final">EN TIEMPO REAL</string>
    <string name="text_slide_final2">SIGUE TU PEDIDO HASTA TU PUERTA</string>
    <string name="comenzar">Comenzar</string>
    <string name="text_slide_final3">Recibe notificaciones en cada etapa: cuando preparan, cuando sale y cuando llega</string>
    <string name="inicio_sesion">Inicio de sesíon</string>
    <string name="correo">Correo Electrónico</string>
    <string name="ejemplo_correo">oscar@ejemplo.com</string>
    <string name="contraseña">Contraseña</string>
    <string name="password">***********</string>
    <string name="requi_pass">La contraseña debe tener minimo 8 caracteres, numeros y caracteres especiales.</string>
    <string name="olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="cuenta_google">Continuar con google</string>
    <string name="iniciar_con_google">Iniciar sesión con google</string>
    <string name="ingresar_huella">Ingresar con huella</string>
    <string name="titulo_registro">REGISTRO DE USUARIO</string>
    <string name="nombre_apellidos">Nombre y apellidos</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="pass">Contraseña</string>
    <string name="obs_pas">La contraseña debe tener minimo 8 caracteres, numeros y caracteres especiales.</string>
    <string name="conf_contraseña">Confirmar contraseña</string>
    <string name="terminos_condiciones">He leído y acepto los terminos y condiciones y la politica de privacidad</string>
    <string name="nueva_cuenta">Crear cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_tienda">MYO Delicious</string>
    <string name="inicio">Inicio</string>
    <string name="catalogo">Catalogo</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="navigation_drawer_open">Menu abierto</string>
    <string name="navigation_drawer_close">Menu cerrado</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="carrito">Carrito</string>
    <string name="cuenta_ok">Su cuenta fue creada satisfactoriamente !!</string>
    <string name="productos_destacados">Productos Destacados</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="correo_enviado">Si la dirección de correo electrónico esta registrada, recibirás un enlace paraa reestablecer tu contraseña en breve. Revisa tu bandeja de entrada o la carpeta de Spam.</string>
    <string name="todos_los_productos">TODOS LOS PRODUCTOS</string>
    <string name="lista_favoritos">FAVORITOS</string>
    <string name="perfil_usuario">PERFIL</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="resumen_de_actividad">Resumen de actividad</string>
    <string name="ordenes_relizadas">Ordenes relizadas</string>
    <string name="mis_direcciones">Mis direcciones</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="ayuda">Ayuda</string>
    <string name="correo_solo_lectura">Correo (solo lectura)</string>
    <string name="num_cel">+57 3333333333</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="nombre_y_apellido">Nombre y apellido</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="toque_para_cambiar">Toque para cambiar</string>
    <string name="editar_perfil_actualizado">Editar Perfil</string>
    <string name="mis_direcciones_de_entrega">Mis direcciones de entrega</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="agregar_editardirecci_n">Agregar / editardirección</string>
    <string name="nombre_de_la_direcci_n">Nombre de la dirección</string>
    <string name="direcc">dirección</string>
    <string name="barrio_ciudad">Barrio / ciudad</string>
    <string name="indicaciones_rep">Notaspara la entrega (indicaciones al repartidor)</string>
    <string name="guardar">Guardar</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="mail_ejemplo_com">mail@ejemplo.com</string>
    <string name="agregar_direcci_n">Agregar dirección</string>
    <string name="preferencias_de_notificaciones">Preferencias de notificaciones</string>
    <string name="pedidos">Pedidos</string>
    <string name="promociones">Promociones</string>
    <string name="soporte">soporte</string>
    <string name="claro">Claro</string>
    <string name="oscuro">Oscuro</string>
    <string name="sistema">Sistema</string>
    <string name="apariencia_selector_de_tema">Apariencia (Selector de tema)</string>
    <string name="seguridad">Seguridad</string>
    <string name="informacion_legal">Informacion legal</string>
    <string name="politica_de_privacidad">Politica de privacidad</string>
    <string name="terminos_de_uso">Terminos de uso</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="detalle_del_producto">Detalle del producto</string>
    <string name="torta_de_chocolate">Torta de chocolate</string>
    <string name="descripcion">Descripcion</string>
    <string name="d_torta_choco">Torta de chocolate con trozos de fruta, mani y varias capas de crema</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="chocolate">- Chocolate\n- crema de leche\n- Mani\n- Frutas</string>
    <string name="chocolate_0">- Chocolate\n- Crema de leche\n- Mani\n- Frutas</string>
    <string name="rese_as">Reseñas</string>
    <string name="carrito_de_compras">Carrito de compras</string>
    <string name="torta_de_choc">Torta de chocolate\n$45.000</string>
    <string name="resumen_de_compra">Resumen de compra</string>
    <string name="subtotal">Subtotal</string>
    <string name="va_subtotal">$36.450</string>
    <string name="iva">Iva</string>
    <string name="val_iva">$8.550</string>
    <string name="domicilio">Domicilio</string>
    <string name="val_domicilio">$5.000</string>
    <string name="total">Total:</string>
    <string name="val_total">$50.000</string>
    <string name="cupon_de_descuento">Cupon de descuento</string>
    <string name="pagar">Pagar</string>
    <string name="continuar">Continuar</string>
    <string name="pasarela_de_pagos">Pasarela de pagos</string>
    <string name="direccion_casa">Direccion Casa\nCalle 48x # 5a 22\nDiana T.</string>
    <string name="medios_de_pagoccion">Medios de PAgoccion</string>
    <string name="terjeta_credito">Terjeta credito</string>
    <string name="pse">PSE</string>
    <string name="pago_exitoso">¡Pago exitoso!</string>
    <string name="numero_de_orden">Numero de orden:</string>
    <string name="myo_00000"># MYO-00000</string>
    <string name="tiempo_estimado_de_entrega">Tiempo estimado de entrega:</string>
    <string name="_35_45_minutos">35 - 45 minutos</string>
    <string name="descargar_recibo_en_pdf">Descargar recibo en PDF</string>
    <string name="seguir_comprando">Seguir comprando</string>
    <string name="cupones_de_descuento">Cupones de descuento</string>
    <string name="primea_compra">Primea compra</string>
    <string name="cump_primera_compra">Activo para primera compra, vigencia maxima primeros 10 dias posterior al registro.</string>
    <string name="hola_administrador">¡Hola Administrador!</string>
    <string name="gestionar_productos">Gestionar productos</string>
    <string name="gestion_de_pedidos">Gestion de pedidos</string>
    <string name="ver_reportes">Ver reportes</string>
    <string name="hoy">Hoy</string>
    <string name="semana">Semana</string>
    <string name="mes">Mes</string>
    <string name="total_ventas">Total ventas</string>
    <string name="total_pedidos">Total pedidos</string>
    <string name="nuevos_usuarios">Nuevos usuarios</string>
    <string name="total_productos">Total productos</string>
    <string name="productos_activos">Productos activos</string>
    <string name="productos_agotados">Productos agotados</string>
    <string name="barra_de_busqueda">Barra de busqueda</string>
    <string name="agotado">Agotado</string>
    <string name="nuevo">Nuevo</string>
    <string name="historial_de_pedidos">Historial de pedidos</string>
    <string name="todos">Todos</string>
    <string name="activos">Activos</string>
    <string name="entregados">Entregados</string>
    <string name="cancelados">Cancelados</string>
    <string name="orden_myo">Orden: #MYO-0000</string>
    <string name="estatus">Activo</string>
    <string name="fecha">Fecha:</string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="items">Items:</string>
    <string name="n_items">N items</string>
    <string name="llamar_al_administrador">Llamar al administrador</string>
    <string name="escribir_al_administrador">Escribir al administrador</string>
    <string name="crear_editar_producto">Crear / editar producto</string>
    <string name="nombre_producto">Nombre producto</string>
    <string name="imagenes">Imagenes</string>
    <string name="descripci_n">Descripción</string>
    <string name="torta_postre_galleta">Torta, postre, galleta...</string>
    <string name="categoria">Categoria</string>
    <string name="precio">Precio</string>
    <string name="stock">Stock</string>
    <string name="guardar_producto">Guardar producto</string>
    <string name="ya_tiene_cuenta_iniciar_sesi_n">¿Ya tiene cuenta? Iniciar sesión</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombres">Nombres</string>
    <string name="inicias_sesion">Inicias sesion</string>
    <string name="total_prod">0</string>
    <string name="cero">0</string>
    <string name="total_venta">$0</string>
    <string name="estatus_1">Estatus</string>
    <string name="url_imagen">Url imagen</string>
    <string name="formato_precio">$%1$,.0f</string>
    <string name="valor_total_pedido">$</string>
    <string name="orden">Orden: MYO#</string>
    <string name="id_pedido" />
    <string name="estatus_pedi" />
    <string name="listado_de_usuarios">Listado de Usuarios</string>
    <string name="galletas">Galletas</string>
    <string name="postres">Postres</string>
    <string name="tortas">Tortas</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
</resources>