<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/crema"
    tools:context=".ui.inicio.SlideInicialActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/pastel"
        android:layout_marginTop="-120sp"
        />

    <TextView
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:src="@android:drawable/dialog_holo_dark_frame"
        android:text="@string/Bienvenida"
        android:textColor="@color/cafe"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tex_slaide_Inicial1"
        android:textSize="28sp"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="3sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tex_slaide_imicial2"
        android:layout_marginStart="55sp"
        android:layout_marginEnd="65sp"
        android:layout_marginTop="15sp"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="80sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp">

    <Button
        android:id="@+id/btn_omitir"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/button_omitir"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:strokeWidth = "2dp"
        app:strokeColor = "@color/black"/>


    <Button
        android:id="@+id/btn_siguiente1"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/button_siguiente"
        android:textColor="@color/white"
        android:backgroundTint="@color/cafe"
        app:strokeWidth = "2dp"
        app:strokeColor = "@color/black"/>

    </LinearLayout>

</LinearLayout>